added NotAllowed Names features to robust the Extrating Names Feature

--- a/Playwright/name_extracting.ipynb
+++ b/Playwright/name_extracting.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e179d376-605c-47ea-a585-05184e146499",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nameparser import HumanName"
+    "from nameparser import HumanName\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "be5c1374-5d40-4422-9975-cc45e5d98c2c",
    "metadata": {},
    "outputs": [],
@@ -32,28 +33,29 @@
     "    \"Mohammad Ayman\",\n",
     "    \"Yasar Khan\",\n",
     "    \"Mohamed Fahmy\",\n",
-    "    \"Odai Nawafleh\",\n",
-    "    \"Kareem Moussa\",\n",
-    "    \"Mennah Azab\",\n",
-    "    \"Pratik Chowdhury\",\n",
-    "    \"Issam EL HADDIOUI\",\n",
-    "    \"Aravind Raj\",\n",
-    "    \"Hana Thaer\",\n",
-    "    \"Ahmad Maher\",\n",
-    "    \"Imperial MBA, MSc, NSE4, CEH\",\n",
-    "    \"Nitin Kapil\",\n",
-    "    \"George Francis\",\n",
-    "    \"SACHU CHANDRAN\",\n",
-    "    \"Ishtiyak Surve\",\n",
-    "    \"Moataz Madkour\",\n",
-    "    \"Kamel Zalt ✔️\",\n",
-    "    \"ENGR MUHAMMAD REHAN\",\n",
+    "    # \"Odai Nawafleh\",\n",
+    "    # \"Kareem Moussa\",\n",
+    "    # \"Mennah Azab\",\n",
+    "    # \"Pratik Chowdhury\",\n",
+    "    # \"Issam EL HADDIOUI\",\n",
+    "    # \"Aravind Raj\",\n",
+    "    # \"Hana Thaer\",\n",
+    "    # \"Ahmad Maher\",\n",
+    "    # \"Imperial MBA, MSc, NSE4, CEH\",\n",
+    "    # \"Nitin Kapil\",\n",
+    "    # \"George Francis\",\n",
+    "    # \"SACHU CHANDRAN\",\n",
+    "    # \"Ishtiyak Surve\",\n",
+    "    # \"Moataz Madkour\",\n",
+    "    # \"Kamel Zalt ✔️\",\n",
+    "    # \"ENGR MUHAMMAD REHAN\",\n",
+    "    \"Mohammed Jamal\"\n",
     "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "a57e5fff-83a2-4fb0-a691-665329d6c3f3",
    "metadata": {},
    "outputs": [
@@ -114,72 +116,12 @@
       "Yasar \n",
       "\n",
       "Mohamed Fahmy\n",
-      "['Mohamed', '', 'Fahmy']\n",
-      "Mohamed \n",
+      "['', '', 'Fahmy']\n",
+      "Fahmy \n",
       "\n",
-      "Odai Nawafleh\n",
-      "['Odai', '', 'Nawafleh']\n",
-      "Nawafleh \n",
-      "\n",
-      "Kareem Moussa\n",
-      "['Kareem', '', 'Moussa']\n",
-      "Kareem \n",
-      "\n",
-      "Mennah Azab\n",
-      "['Mennah', '', 'Azab']\n",
-      "Mennah \n",
-      "\n",
-      "Pratik Chowdhury\n",
-      "['Pratik', '', 'Chowdhury']\n",
-      "Chowdhury \n",
-      "\n",
-      "Issam El Haddioui\n",
-      "['Issam', 'El', 'Haddioui']\n",
-      "Haddioui \n",
-      "\n",
-      "Aravind Raj\n",
-      "['Aravind', '', 'Raj']\n",
-      "Aravind \n",
-      "\n",
-      "Hana Thaer\n",
-      "['Hana', '', 'Thaer']\n",
-      "Hana \n",
-      "\n",
-      "Ahmad Maher\n",
-      "['Ahmad', '', 'Maher']\n",
-      "Ahmad \n",
-      "\n",
-      "Imperial Mba, Msc, Nse4, Ceh\n",
-      "['Msc', '', 'Imperial']\n",
-      "Imperial \n",
-      "\n",
-      "Nitin Kapil\n",
-      "['Nitin', '', 'Kapil']\n",
-      "Nitin \n",
-      "\n",
-      "George Francis\n",
-      "['George', '', 'Francis']\n",
-      "George \n",
-      "\n",
-      "Sachu Chandran\n",
-      "['Sachu', '', 'Chandran']\n",
-      "Chandran \n",
-      "\n",
-      "Ishtiyak Surve\n",
-      "['Ishtiyak', '', 'Surve']\n",
-      "Ishtiyak \n",
-      "\n",
-      "Moataz Madkour\n",
-      "['Moataz', '', 'Madkour']\n",
-      "Moataz \n",
-      "\n",
-      "Kamel Zalt ✔️\n",
-      "['Kamel', 'Zalt', '️']\n",
-      "Kamel \n",
-      "\n",
-      "Engr Muhammad Rehan\n",
-      "['Engr', 'Muhammad', 'Rehan']\n",
-      "Muhammad \n",
+      "Mohammed Jamal\n",
+      "['', '', 'Jamal']\n",
+      "Jamal \n",
       "\n"
      ]
     }
@@ -192,7 +134,11 @@
     "    name = HumanName(data_i)\n",
     "    first , middle, last = name['first'], name['middle'], name['last']\n",
     "    \n",
-    "    if \"muhammad\" in first.lower() or \"mohammad\" in first.lower(): first = \"\"\n",
+    "    notAlloweds = [\"muhammad\", \"mohammad\", \"mohammed\", \"muhammed\", \"mohamed\", \"muhamed\"]\n",
+    "    \n",
+    "    for notAllowed in notAlloweds:\n",
+    "        if notAllowed in first.lower() : first = \"\"\n",
+    "        if notAllowed in middle.lower() : middle = \"\"\n",
     "    \n",
     "    listed = [first , middle, last]\n",
     "    print(listed)\n",
@@ -203,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "12e33117-c435-4806-bd6b-58044ca8fb1a",
    "metadata": {},
    "outputs": [],
@@ -285,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "043a2fc4-dcb9-42b8-ba6b-74bb093e4a3a",
    "metadata": {},
    "outputs": [
@@ -293,138 +239,308 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hani Asaad\n",
-      "['Hani', '', 'Asaad']\n",
-      "Hani \n",
+      "Harmain Iqbal\n",
+      "['Harmain', '', 'Iqbal']\n",
+      "Harmain \n",
       "\n",
-      "Anas Raqi\n",
-      "['Anas', '', 'Raqi']\n",
-      "Anas \n",
+      "Buxial Khan\n",
+      "['Buxial', '', 'Khan']\n",
+      "Buxial \n",
       "\n",
-      "Divya Mukundan\n",
-      "['Divya', '', 'Mukundan']\n",
-      "Mukundan \n",
+      "Aminah Noman\n",
+      "['Aminah', '', 'Noman']\n",
+      "Aminah \n",
       "\n",
-      "Swati Mishra\n",
-      "['Swati', '', 'Mishra']\n",
-      "Swati \n",
+      "Hafsa Tariq\n",
+      "['Hafsa', '', 'Tariq']\n",
+      "Hafsa \n",
       "\n",
-      "Awn Albuhairy\n",
-      "['Awn', '', 'Albuhairy']\n",
-      "Albuhairy \n",
+      "Fareed Asif\n",
+      "['Fareed', '', 'Asif']\n",
+      "Fareed \n",
       "\n",
-      "L D Satish Kumar\n",
-      "['L', 'D Satish', 'Kumar']\n",
-      "D Satish \n",
+      "Stariq Shah Gilani\n",
+      "['Stariq', 'Shah', 'Gilani']\n",
+      "Stariq \n",
       "\n",
-      "Pramila Basnet\n",
-      "['Pramila', '', 'Basnet']\n",
-      "Pramila \n",
+      "Bilal Laiq\n",
+      "['Bilal', '', 'Laiq']\n",
+      "Bilal \n",
       "\n",
-      "Raj Chaudhary\n",
-      "['Raj', '', 'Chaudhary']\n",
-      "Chaudhary \n",
+      "Engineer Muhammad Rehan\n",
+      "['', '', 'Rehan']\n",
+      "Rehan \n",
       "\n",
-      "Raship Chhabra\n",
-      "['Raship', '', 'Chhabra']\n",
-      "Raship \n",
+      "Muneer Siddiqui\n",
+      "['Muneer', '', 'Siddiqui']\n",
+      "Muneer \n",
       "\n",
-      "Arjun V\n",
-      "['Arjun', '', 'V']\n",
-      "Arjun \n",
+      "Maryam Khan\n",
+      "['Maryam', '', 'Khan']\n",
+      "Maryam \n",
       "\n",
-      "Saad Al-taher\n",
-      "['Saad', '', 'Al-taher']\n",
-      "Al-taher \n",
+      "Abdul Haseeb Khan\n",
+      "['Abdul', 'Haseeb', 'Khan']\n",
+      "Haseeb \n",
       "\n",
-      "Mohammad Ayman\n",
-      "['', '', 'Ayman']\n",
-      "Ayman \n",
+      "Zohaib Ali\n",
+      "['Zohaib', '', 'Ali']\n",
+      "Zohaib \n",
       "\n",
-      "Yasar Khan\n",
-      "['Yasar', '', 'Khan']\n",
-      "Yasar \n",
+      "Aliza Farrukh\n",
+      "['Aliza', '', 'Farrukh']\n",
+      "Aliza \n",
       "\n",
-      "Mohamed Fahmy\n",
-      "['Mohamed', '', 'Fahmy']\n",
-      "Mohamed \n",
+      "Dhani Bakhsh Magsi\n",
+      "['Dhani', 'Bakhsh', 'Magsi']\n",
+      "Bakhsh \n",
       "\n",
-      "Odai Nawafleh\n",
-      "['Odai', '', 'Nawafleh']\n",
-      "Nawafleh \n",
+      "Sohaib Hussain Shaikh\n",
+      "['Sohaib', 'Hussain', 'Shaikh']\n",
+      "Hussain \n",
       "\n",
-      "Kareem Moussa\n",
-      "['Kareem', '', 'Moussa']\n",
-      "Kareem \n",
+      "Ashar Hashmi\n",
+      "['Ashar', '', 'Hashmi']\n",
+      "Ashar \n",
       "\n",
-      "Mennah Azab\n",
-      "['Mennah', '', 'Azab']\n",
-      "Mennah \n",
+      "Muhammad Muneeb Khan\n",
+      "['', 'Muneeb', 'Khan']\n",
+      "Muneeb \n",
       "\n",
-      "Pratik Chowdhury\n",
-      "['Pratik', '', 'Chowdhury']\n",
-      "Chowdhury \n",
+      "Nimra Chauhan\n",
+      "['Nimra', '', 'Chauhan']\n",
+      "Nimra \n",
       "\n",
-      "Issam El Haddioui\n",
-      "['Issam', 'El', 'Haddioui']\n",
-      "Haddioui \n",
+      "Agha Ali Aziz Khan\n",
+      "['Agha', 'Ali Aziz', 'Khan']\n",
+      "Ali Aziz \n",
       "\n",
-      "Aravind Raj\n",
-      "['Aravind', '', 'Raj']\n",
-      "Aravind \n",
+      "Saif Khan\n",
+      "['Saif', '', 'Khan']\n",
+      "Saif \n",
       "\n",
-      "Hana Thaer\n",
-      "['Hana', '', 'Thaer']\n",
-      "Hana \n",
+      "Adil Ali\n",
+      "['Adil', '', 'Ali']\n",
+      "Adil \n",
       "\n",
-      "Ahmad Maher\n",
-      "['Ahmad', '', 'Maher']\n",
-      "Ahmad \n",
+      "Syeda Rimsha Bukhari\n",
+      "['Syeda', 'Rimsha', 'Bukhari']\n",
+      "Rimsha \n",
       "\n",
-      "Imperial Mba, Msc, Nse4, Ceh\n",
-      "['Msc', '', 'Imperial']\n",
-      "Imperial \n",
+      "Alishba Masood\n",
+      "['Alishba', '', 'Masood']\n",
+      "Alishba \n",
       "\n",
-      "Nitin Kapil\n",
-      "['Nitin', '', 'Kapil']\n",
-      "Nitin \n",
+      "Sohrab Khan Brohi\n",
+      "['Sohrab', 'Khan', 'Brohi']\n",
+      "Sohrab \n",
       "\n",
-      "George Francis\n",
-      "['George', '', 'Francis']\n",
-      "George \n",
+      "Qazi Muhammad Nasir\n",
+      "['Qazi', '', 'Nasir']\n",
+      "Qazi \n",
       "\n",
-      "Sachu Chandran\n",
-      "['Sachu', '', 'Chandran']\n",
-      "Chandran \n",
+      "Abdul Rehman Lodhi\n",
+      "['Abdul', 'Rehman', 'Lodhi']\n",
+      "Rehman \n",
       "\n",
-      "Ishtiyak Surve\n",
-      "['Ishtiyak', '', 'Surve']\n",
-      "Ishtiyak \n",
+      "Asif Ali\n",
+      "['Asif', '', 'Ali']\n",
+      "Asif \n",
       "\n",
-      "Moataz Madkour\n",
-      "['Moataz', '', 'Madkour']\n",
-      "Moataz \n",
+      "Zaki Abbas\n",
+      "['Zaki', '', 'Abbas']\n",
+      "Zaki \n",
       "\n",
-      "Kamel Zalt ✔️\n",
-      "['Kamel', 'Zalt', '️']\n",
-      "Kamel \n",
+      "Syed Mujeeb Ur Rehman Shah\n",
+      "['Syed', 'Mujeeb Ur Rehman', 'Shah']\n",
+      "Mujeeb Ur Rehman \n",
       "\n",
-      "Engr Muhammad Rehan\n",
-      "['Engr', 'Muhammad', 'Rehan']\n",
-      "Muhammad \n",
+      "Fariha Rafique\n",
+      "['Fariha', '', 'Rafique']\n",
+      "Fariha \n",
+      "\n",
+      "Shiza Nadeem Baig\n",
+      "['Shiza', 'Nadeem', 'Baig']\n",
+      "Nadeem \n",
+      "\n",
+      "Burhan Khanzada\n",
+      "['Burhan', '', 'Khanzada']\n",
+      "Burhan \n",
+      "\n",
+      "Eman Khan\n",
+      "['Eman', '', 'Khan']\n",
+      "Eman \n",
+      "\n",
+      "Aijaz Muhammad Usmani\n",
+      "['Aijaz', '', 'Usmani']\n",
+      "Aijaz \n",
+      "\n",
+      "Fahad Sadiq\n",
+      "['Fahad', '', 'Sadiq']\n",
+      "Fahad \n",
+      "\n",
+      "Najaf Ali\n",
+      "['Najaf', '', 'Ali']\n",
+      "Najaf \n",
+      "\n",
+      "Inamullah Qaisrani\n",
+      "['Inamullah', '', 'Qaisrani']\n",
+      "Inamullah \n",
+      "\n",
+      "Ahsan Siddiqui\n",
+      "['Ahsan', '', 'Siddiqui']\n",
+      "Siddiqui \n",
+      "\n",
+      "Tahira Jabeen\n",
+      "['Tahira', '', 'Jabeen']\n",
+      "Tahira \n",
+      "\n",
+      "Waqas Rehman\n",
+      "['Waqas', '', 'Rehman']\n",
+      "Waqas \n",
+      "\n",
+      "Faisal Khan\n",
+      "['Faisal', '', 'Khan']\n",
+      "Faisal \n",
+      "\n",
+      "Ahsan Hussain\n",
+      "['Ahsan', '', 'Hussain']\n",
+      "Ahsan \n",
+      "\n",
+      "Mahad Amh\n",
+      "['Mahad', '', 'Amh']\n",
+      "Mahad \n",
+      "\n",
+      "Sibghat Ullah Hamad\n",
+      "['Sibghat', 'Ullah', 'Hamad']\n",
+      "Sibghat \n",
+      "\n",
+      "Faryal K.\n",
+      "['Faryal', '', 'K.']\n",
+      "Faryal \n",
+      "\n",
+      "Syeda Hooria\n",
+      "['Syeda', '', 'Hooria']\n",
+      "Syeda \n",
+      "\n",
+      "Fariha Aziz\n",
+      "['Fariha', '', 'Aziz']\n",
+      "Fariha \n",
+      "\n",
+      "Syed Mohammad\n",
+      "['Syed', '', 'Mohammad']\n",
+      "Mohammad \n",
+      "\n",
+      "Ehtesham Alvi\n",
+      "['Ehtesham', '', 'Alvi']\n",
+      "Ehtesham \n",
+      "\n",
+      "Ayesha A.\n",
+      "['Ayesha', '', 'A.']\n",
+      "Ayesha \n",
+      "\n",
+      "Salman Channa\n",
+      "['Salman', '', 'Channa']\n",
+      "Salman \n",
+      "\n",
+      "Tuba Ghafoor\n",
+      "['Tuba', '', 'Ghafoor']\n",
+      "Ghafoor \n",
+      "\n",
+      "Umar Farooq\n",
+      "['Umar', '', 'Farooq']\n",
+      "Umar \n",
+      "\n",
+      "Kashish Shewani\n",
+      "['Kashish', '', 'Shewani']\n",
+      "Kashish \n",
+      "\n",
+      "Shahzaib Rajper\n",
+      "['Shahzaib', '', 'Rajper']\n",
+      "Shahzaib \n",
+      "\n",
+      "Ahmed Hussain\n",
+      "['Ahmed', '', 'Hussain']\n",
+      "Ahmed \n",
+      "\n",
+      "Saad Faisal\n",
+      "['Saad', '', 'Faisal']\n",
+      "Saad \n",
+      "\n",
+      "Muhammad Areeb\n",
+      "['', '', 'Areeb']\n",
+      "Areeb \n",
+      "\n",
+      "Syed Usama Ahmad Sohail\n",
+      "['Syed', 'Usama Ahmad', 'Sohail']\n",
+      "Usama Ahmad \n",
+      "\n",
+      "Asif Ali\n",
+      "['Asif', '', 'Ali']\n",
+      "Asif \n",
+      "\n",
+      "Alishba Khan\n",
+      "['Alishba', '', 'Khan']\n",
+      "Alishba \n",
+      "\n",
+      "Waleed Hassan\n",
+      "['Waleed', '', 'Hassan']\n",
+      "Waleed \n",
+      "\n",
+      "Muhammad Danish\n",
+      "['', '', 'Danish']\n",
+      "Danish \n",
+      "\n",
+      "Taha Hassan\n",
+      "['Taha', '', 'Hassan']\n",
+      "Taha \n",
+      "\n",
+      "Murk Faiz\n",
+      "['Murk', '', 'Faiz']\n",
+      "Murk \n",
+      "\n",
+      "Muhammad Ameer Hamza\n",
+      "['', 'Ameer', 'Hamza']\n",
+      "Ameer \n",
+      "\n",
+      "Syeda Manahil Faraz\n",
+      "['Syeda', 'Manahil', 'Faraz']\n",
+      "Manahil \n",
+      "\n",
+      "Syed Asim Ali\n",
+      "['Syed', 'Asim', 'Ali']\n",
+      "Syed \n",
+      "\n",
+      "Khushboo Zameer\n",
+      "['Khushboo', '', 'Zameer']\n",
+      "Khushboo \n",
+      "\n",
+      "Maham Furqan\n",
+      "['Maham', '', 'Furqan']\n",
+      "Maham \n",
+      "\n",
+      "Ahsan Zahid\n",
+      "['Ahsan', '', 'Zahid']\n",
+      "Ahsan \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for data_i in data:\n",
+    "for data_i in data2:\n",
     "    data_i = \" \".join([name.capitalize() for name in data_i.split()])\n",
     "    print(data_i)\n",
     "    \n",
     "    name = HumanName(data_i)\n",
     "    first , middle, last = name['first'], name['middle'], name['last']\n",
     "    \n",
-    "    if \"muhammad\" in first.lower() or \"mohammad\" in first.lower(): first = \"\"\n",
+    "    \n",
+    "    notAlloweds = [\"muhammad\", \"mohammad\", \"mohammed\", \"muhammed\", \"mohamed\", \"muhamed\"]\n",
+    "    \n",
+    "    for notAllowed in notAlloweds:\n",
+    "        if notAllowed in first.lower() : first = \"\"\n",
+    "        if notAllowed in middle.lower() : middle = \"\"\n",
+    "        \n",
     "    \n",
     "    listed = [first , middle, last]\n",
     "    print(listed)\n",
