--- a/Playwright/Applicants_registered.ipynb
+++ b/Playwright/Applicants_registered.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "492ae1ee-1b0c-41e9-8d4e-6687c85b0fd4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d84b2ff8-35e3-44de-a70e-996672ad53e2",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "2a6caaaa-87af-4913-965f-c0d18ab2268a",
    "metadata": {},
    "outputs": [
@@ -43,8 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(150, 35)\n",
-      "(133, 35)\n"
+      "(177, 35)\n",
+      "(159, 35)\n"
      ]
     },
     {
@@ -94,78 +94,54 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>649f27f61b4a4b001d086f27</td>\n",
-       "      <td>Monica Bruno</td>\n",
+       "      <td>64a29c021b4a4b001d1fc948</td>\n",
+       "      <td>Rehman Ahmed</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>applied</td>\n",
-       "      <td>Senior Marketing Specialist</td>\n",
-       "      <td>Perfect Purity</td>\n",
+       "      <td>UI/UX Designer</td>\n",
+       "      <td>Venture Republic</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>57.14%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100.00%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6497e536d774dd001def7abb</td>\n",
-       "      <td>Fahad Javaid</td>\n",
+       "      <td>64a297db1b4a4b001d1f7b45</td>\n",
+       "      <td>Lamia Boudjellel</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Not applied</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>100.00%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.29%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>649962b7508a29001dc2a6bf</td>\n",
-       "      <td>Syed Usama Sohail</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>applied</td>\n",
-       "      <td>Business Development Executive</td>\n",
-       "      <td>The Brand Consultants</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>57.14%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>64ad92b35dae83001d7665e2</td>\n",
        "      <td>Arun Chachan</td>\n",
        "      <td>Yes</td>\n",
@@ -189,15 +165,15 @@
        "      <td>100.00%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>64a297db1b4a4b001d1f7b45</td>\n",
-       "      <td>Lamia Boudjellel</td>\n",
+       "      <th>3</th>\n",
+       "      <td>649962b7508a29001dc2a6bf</td>\n",
+       "      <td>Syed Usama Sohail</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Not applied</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>applied</td>\n",
+       "      <td>Talent Acquisition Intern</td>\n",
+       "      <td>Qureos</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
@@ -206,11 +182,35 @@
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>57.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>649f27f61b4a4b001d086f27</td>\n",
+       "      <td>Monica Bruno</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>14.29%</td>\n",
+       "      <td>applied</td>\n",
+       "      <td>Senior Marketing Specialist</td>\n",
+       "      <td>Perfect Purity</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57.14%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -219,44 +219,44 @@
       ],
       "text/plain": [
        "                        _id          full_name email_provided  referrer_name  \\\n",
-       "0  649f27f61b4a4b001d086f27       Monica Bruno            Yes            NaN   \n",
-       "1  6497e536d774dd001def7abb       Fahad Javaid            Yes            NaN   \n",
-       "2  649962b7508a29001dc2a6bf  Syed Usama Sohail            Yes            NaN   \n",
-       "3  64ad92b35dae83001d7665e2       Arun Chachan            Yes            NaN   \n",
-       "4  64a297db1b4a4b001d1f7b45   Lamia Boudjellel            Yes            NaN   \n",
+       "0  64a29c021b4a4b001d1fc948       Rehman Ahmed            Yes            NaN   \n",
+       "1  64a297db1b4a4b001d1f7b45   Lamia Boudjellel            Yes            NaN   \n",
+       "2  64ad92b35dae83001d7665e2       Arun Chachan            Yes            NaN   \n",
+       "3  649962b7508a29001dc2a6bf  Syed Usama Sohail            Yes            NaN   \n",
+       "5  649f27f61b4a4b001d086f27       Monica Bruno            Yes            NaN   \n",
        "\n",
-       "   application                           title                   name  \\\n",
-       "0      applied     Senior Marketing Specialist         Perfect Purity   \n",
-       "1  Not applied                             NaN                    NaN   \n",
-       "2      applied  Business Development Executive  The Brand Consultants   \n",
-       "3  Not applied                             NaN                    NaN   \n",
-       "4  Not applied                             NaN                    NaN   \n",
+       "   application                        title              name  onboardingstep  \\\n",
+       "0      applied               UI/UX Designer  Venture Republic            13.0   \n",
+       "1  Not applied                          NaN               NaN             8.0   \n",
+       "2  Not applied                          NaN               NaN            13.0   \n",
+       "3      applied    Talent Acquisition Intern            Qureos            13.0   \n",
+       "5      applied  Senior Marketing Specialist    Perfect Purity            13.0   \n",
        "\n",
-       "   onboardingstep aboutme1 profileheadline  ... company_values location  \\\n",
-       "0            13.0      NaN             NaN  ...            NaN      Yes   \n",
-       "1            13.0      Yes             NaN  ...            Yes      Yes   \n",
-       "2            13.0      NaN             NaN  ...            NaN      Yes   \n",
-       "3            13.0      Yes             NaN  ...            Yes      Yes   \n",
-       "4             8.0      NaN             NaN  ...            NaN      Yes   \n",
+       "  aboutme1 profileheadline  ... company_values location nationality gender  \\\n",
+       "0      Yes             NaN  ...            Yes      Yes         Yes    Yes   \n",
+       "1      NaN             NaN  ...            NaN      Yes         Yes    Yes   \n",
+       "2      Yes             NaN  ...            Yes      Yes         Yes    Yes   \n",
+       "3      NaN             NaN  ...            NaN      Yes         Yes    Yes   \n",
+       "5      NaN             NaN  ...            NaN      Yes         Yes    Yes   \n",
        "\n",
-       "  nationality  gender photo phone_number languages secondaryemail  \\\n",
-       "0         Yes     Yes   Yes          Yes       NaN            Yes   \n",
-       "1         Yes     Yes   Yes          Yes       NaN            NaN   \n",
-       "2         Yes     Yes   NaN          Yes       NaN            NaN   \n",
-       "3         Yes     Yes   Yes          Yes       NaN            NaN   \n",
-       "4         Yes     Yes   NaN          NaN       NaN            NaN   \n",
+       "  photo phone_number languages secondaryemail whatsappnumber  \\\n",
+       "0   Yes          Yes       NaN            NaN            Yes   \n",
+       "1   NaN          NaN       NaN            NaN            NaN   \n",
+       "2   Yes          Yes       NaN            NaN            NaN   \n",
+       "3   NaN          Yes       NaN            NaN            NaN   \n",
+       "5   Yes          Yes       NaN            Yes            NaN   \n",
        "\n",
-       "  whatsappnumber Profile Completion %  \n",
-       "0            NaN               57.14%  \n",
-       "1            NaN              100.00%  \n",
-       "2            NaN               57.14%  \n",
-       "3            NaN              100.00%  \n",
-       "4            NaN               14.29%  \n",
+       "  Profile Completion %  \n",
+       "0              100.00%  \n",
+       "1               14.29%  \n",
+       "2              100.00%  \n",
+       "3               57.14%  \n",
+       "5               57.14%  \n",
        "\n",
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "738fbad7-6fab-44c9-be04-3007903e6d13",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "3bced69c-53bb-47da-b16b-df8ee41b2f5a",
    "metadata": {},
    "outputs": [],
@@ -292,17 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "cc58ce12-d9f0-48c4-abaf-aeb528c8a1a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(78, 38)"
+       "(72, 38)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "f5850607-08e8-47b8-878f-3152b1567934",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "bfad9c7a-69b2-486c-9c7d-52607ea89e52",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "8bbbd8bf-9629-46ad-bc45-a9f2b6ed0b14",
    "metadata": {},
    "outputs": [
@@ -969,10 +969,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.00%</td>\n",
+       "      <td>28.57%</td>\n",
        "      <td>2023-06-25 23:49:25</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>28.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -1406,7 +1406,7 @@
        "20       NaN            NaN            NaN              100.00%   \n",
        "21       NaN            NaN            NaN               85.71%   \n",
        "22       NaN            Yes            Yes               57.14%   \n",
-       "23       NaN            NaN            NaN                0.00%   \n",
+       "23       NaN            NaN            NaN               28.57%   \n",
        "24       NaN            Yes            Yes               57.14%   \n",
        "25       NaN            Yes            Yes               57.14%   \n",
        "26       NaN            NaN            NaN                0.00%   \n",
@@ -1444,7 +1444,7 @@
        "20  2023-06-25 23:49:25               3             100.0  \n",
        "21  2023-06-25 23:49:25               3             85.71  \n",
        "22  2023-06-25 23:49:25               3             57.14  \n",
-       "23  2023-06-25 23:49:25               3               0.0  \n",
+       "23  2023-06-25 23:49:25               3             28.57  \n",
        "24  2023-06-25 23:49:25               3             57.14  \n",
        "25  2023-06-25 23:49:25               3             57.14  \n",
        "26  2023-06-25 23:49:25               3               0.0  \n",
@@ -1461,7 +1461,7 @@
        "[36 rows x 38 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
